syntax = "proto3";

package amazingchow.photon_dance_vector_space_searcher;
option go_package = "github.com/amazingchow/photon-dance-vector-space-searcher/api";

import "google/api/annotations.proto";

enum WebStation {
	// 中华人民共和国财政部网站
	MOFRPC = 0;
}

enum DocType {
	// HTML格式文件
	HTMLDoc = 0;
	// TXT格式文件
	TextDoc = 1;
}

enum PacketDeliveryStatus {
	// 数据包派送中
	InDelivery = 0;
	// 数据包派送完毕或无数据可供派送
	OutOfStock = 1;
}

// 传输数据包.
message Packet
{
	WebStation web_station = 1;
	DocType doc_type = 2;
	string doc_id = 3;
	string doc_title = 4;
	PacketDeliveryStatus delivery_status = 5;
}

/* -------------------- request & response -------------------- */
message QueryRequest
{
	string query = 1;
	uint32 topk = 2;
}

message QueryResponse
{
	repeated string docs = 1;
}

message GetSystemInfoRequest {}

enum ServiceStatus {
	Unavailable = 0;
	Available = 1;
}

message GetSystemInfoResponse
{
	uint64 document_capacity = 1;
	uint64 document = 2;
	uint64 vocabulary_capacity = 3;
	uint64 vocabulary = 4;
	ServiceStatus service_status = 5;
}

/* -------------------- grpc gateway -------------------- */
service QueryService
{
	rpc Query(QueryRequest) returns (QueryResponse)
	{
		option (google.api.http) = {
			post: "/v1/query"
			body: "*"
		};
	}

	rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse)
	{
		option (google.api.http) = {
			get: "/v1/system_info"
		};
	}
}
